# DNAStorage_LCRC

./: README.md
LCRC_MediumScale/: CMakeLists.txt  run_decoding.sh  run_decoding_realTime.sh  run_gen_LCRC_refer.sh
LCRC_MediumScale/config/: ldpc.pchk  m65535.txt
LCRC_MediumScale/src/: Decoder_oligoPool_300K.cpp  Decoder_oligoPool_realTime_300K.cpp  Generate_LCRC_refer.cpp  ldpc_decode.h  rsCodec.h  thpool.cpp  thpool.h
LCRC_MediumScale/srcdata/: Poem_EN.txt
LCRC_SmallScale/: CMakeLists.txt  run_decoding_oligoPool.sh  run_decoding_realTime.sh  run_split_fastq.sh
LCRC_SmallScale/config/: PNseq_refer.fa  PNseq_refer.fa.amb  PNseq_refer.fa.ann  PNseq_refer.fa.bwt  PNseq_refer.fa.pac  PNseq_refer.fa.sa  m31.txt
LCRC_SmallScale/reference/DNA_largeDNA/: largeDNA.fa
LCRC_SmallScale/reference/DNA_oligoPool/: oligoPool_11.7K.fa  srcdata.txt
LCRC_SmallScale/src/: Decoder_realTime.cpp  alloc.h  compositeCode.h  edlib.cpp  error_correction_oligoPool.cpp  identification_consensus_oligoPool.cpp  utils.h
LCRC_SmallScale/srcdata/: Tang_Poem.txt
